--- a/services.html
+++ b/services.html
@@ -96,14 +96,10 @@ Author URL: http://w3layouts.com
       <div class="row bottom-ab-grids align-items-center">
         <div class="col-lg-6 bottom-ab-left pr-lg-5">
                 <h3 class="hny-title">
-            ENVIRONMENTAL SUSTAINABILITY CONSULTANCY</h3>
-          <p class="my-3 pr-lg-4">Tropitech aims to help organizations comply with environmental regulations 
-            and improve their environmental performance. We focus on helping organizations achieve their 
-            sustainable goals, address stakeholder concerns and social risks and implement what is in line 
-            with the environment. Our other goal is to help in reducing environmental impact and promote 
-            sustainable practices, while also improving the clients  bottom line through cost savings and 
-            increased efficiency. Our area of expertise ranges mainly in the following areas;</p>
-        
+           <h3 class="hny-title">AGRICULTURAL INPUT SUPPLY</h3>
+        <p>We recognize the uses of environmental sensitive innovations that are affordable to growers under their conditions. Our focus is on seeds supply, supply of healthy seedlings, fertilizers and pesticide supply. 
+          In partnership with other organizations and suppliers, Tropitech aims to provide advanced and modern production systems and technologies which will optimize productivity and improve quality of farm produce. Our team of experts is always on the lookout for new and innovative products that can help our customers achieve better results and improve their bottom line.
+          </p>        
         </div>
         <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5">
           <img src="assets/images/ab3.jpg" class="img-curve img-fluid" alt="" />
