--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@ Author URL: http://w3layouts.com
           In partnership with other organizations and suppliers, Tropitech aims to provide advanced and modern production systems and technologies which will optimize productivity and improve quality of farm produce. Our team of experts is always on the lookout for new and innovative products that can help our customers achieve better results and improve their bottom line.
           </p>
       
-        <div class="three-grids row">
+        <!--<div class="three-grids row">
           <div class="col-lg-4 col-md-6 grid mt-md-0 mt-4">
             <div class="icon">
               <span class="fa fa-pagelines" aria-hidden="true"></span>
@@ -152,7 +152,7 @@ We also provide training, support and supervise a team of quality assurance tech
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
     </div>
   </div>
 </section>
